--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <h1>Dataguard Event Groups Generator</h1>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
